# stm32-project-template

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci-pipeline.yml
cmake/microcontrollers/: stm32l4-gcc.cmake
cmake/toolchains/: gcc-arm-none-eabi.cmake
cmake/tools/: clang-tools.cmake  python.cmake
docs/doxygen/: Doxyfile
include/: button.h  error_handler.h  led.h  log.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  system_clock.h
lib/: CMakeLists.txt
mcal/st-stm32l4/gcc-arm/: startup_stm32l496xx.s
mcal/st-stm32l4/include/: gpio.h  rcc.h  systick.h  uart.h
mcal/st-stm32l4/source/: gpio.c  rcc.c  systick.c  uart.c
mcal/st-stm32l4/svd/: STM32L412.svd  STM32L476.svd  STM32L496.svd  STM32L4x1.svd  STM32L4x2.svd  STM32L4x3.svd  STM32L4x5.svd  STM32L4x6.svd
project/ozone/debug/: stm32-project-template.jdebug
script/: clang_format.py
source/: button.c  error_handler.c  led.c  log.c  main.c  stm32l4xx_it.c  system_clock.c  system_stm32l4xx.c
